Core java finished again